developerProject/force-app/main/default/objects/OJ_PM__Process_Decision__c/OJ_PM__Process_Decision__c.object-meta.xml
<CustomObject>
    <label>Process Decision</label>
    <nameField>
        <label>Process Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>