developerProject/force-app/main/default/objects/OJ_PM__Process_Decision__c/fields/OJ_PM__Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>