developerProject/force-app/main/default/objects/OJ_PM__Process_Decision__c/fields/OJ_PM__Process_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Process_Step_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Step</label>
    <referenceTo>OJ_PM__Process_Step__c</referenceTo>
    <relationshipLabel>Process Decisions (Process Step)</relationshipLabel>
    <relationshipName>Process_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>