developerProject/force-app/main/default/objects/OJ_PM__Process_Decision__c/fields/OJ_PM__Text_Value__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Text_Value__c</fullName>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>